# migrate

./: .gitignore  CMakeLists.txt  count_mariadb.sh  count_pg.sh  docker-compose.yml  justfile  refresh_mariadb.sh  refresh_pg.sh
include/: binary.hpp  db_helper.hpp  io_helper.hpp  types.hpp
src/: binary.cpp  db_helper.cpp  io_helper.cpp  main.cpp  populate.cpp
